--- a/package.json
+++ b/package.json
@@ -10,7 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.4.3",
+    "angular-ui-router": "^0.2.15",
     "body-parser": "^1.13.2",
-    "express": "^4.13.1"
+    "bootstrap": "^3.3.5",
+    "express": "^4.13.1",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-mocha": "^2.1.1",
+    "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-run": "^1.6.8",
+    "gulp-sass": "^2.0.1",
+    "gulp-sourcemaps": "^1.5.2",
+    "jquery": "^2.1.4",
+    "run-sequence": "^1.1.2",
+    "sass": "^0.5.0"
   }
 }
